Fix: fix long words not wrapping on small screens

--- a/nebula/static/css/main.css
+++ b/nebula/static/css/main.css
@@ -148,6 +148,8 @@ p {
 	font-weight: 400;
 	letter-spacing: 0.04rem;
 	line-height: 1.25rem;
+	word-wrap: break-word;
+	width: 100%;
 }
 
 p:last-child {
